--- a/anillos.html
+++ b/anillos.html
@@ -81,11 +81,20 @@
                             </li>
                         </div>
                     </ul>
+                    <form class="d-flex">
+                        <input class="form-control me-2" id="filtroBusqueda" type="search" placeholder="Buscá tu producto" aria-label="Search">
+                        <button class="btn btn-outline-success" id="btnBuscadorUno" type="button">Buscar</button>
+                    </form>
                 </div>
             </div>
         </nav>
     </header>
-    <main class="anilloUno">
+    </section>
+    <main class="mainAsaide">
+        <aside class="asaidePrincipal">
+            <h2>Filtros</h2>
+        </aside>
+    <section class="anilloUno">
         <section class="anilloDos" id="js-anillosDos">
         </section>
         <div id="carr"></div>
@@ -204,6 +213,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="archivos css/java/datostorege.js"></script>
     <script src="archivos css/java/funciones.js"></script>
+    
     <script src="archivos css/java/anillos.js"></script>
     <script src="archivos css/js/bootstrap.js"></script>
 </body>
