--- a/registrarse.html
+++ b/registrarse.html
@@ -85,9 +85,12 @@
             </div>
         </nav>
     </header>
-    <main class="regisDos">
+    <main>
+    <section class="confirmacionOcho"></section>
+    <section class="regisDos">
+        
         <section class="regisTres">
-            <fieldset class="registrarseUno">
+            <fieldset class="registrarseUno" id="js-registrarseUno">
                 <legend>
                     <h2>Registrarse</h2>
                 </legend>
@@ -145,7 +148,8 @@
                 </form>
             </fieldset>
         </section>
-    </main>
+    </section>
+</main>
     <hr>
     <footer id="footer" class="pieUno">
         <section class="pieDose">
