--- a/Confirmacion.html
+++ b/Confirmacion.html
@@ -21,78 +21,12 @@
 </head>
 
 <body>
-    <header>
-        <a href="index.html"><img class="imagenDos animate__animated animate__fadeInLeft" src="fotos/logo pagina.jpg"
-                alt="logo pagina" width="100px"></a>
-        <h1 class="Berenice animate__animated animate__fadeInDown">Berenice Piedras Preciosas</h1>
-        <nav class="navbar navbar-expand-lg navbar-dark">
-            <div class="container-fluid">
-                <a class="navbar-link" href="index.html"></a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="barraUno navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
-                            <a class="barraDos nav-link" aria-current="page" href="index.html">INICIO</a>
-                        </li>
-                        <li class="barraDos nav-item">
-                            <a class="nav-link" aria-current="page" href="catalogo.html">CATALOGO</a>
-                        </li>
-                        <li class="barraDos nav-item">
-                            <a class="nav-link" href="revendedores.html">REVENDEDORES</a>
-                        </li>
-                        <li class="barraDos nav-item">
-                            <a class="nav-link" href="carrito.html">CARRITO</a>
-                        </li>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="barraDos nav-link dropdown-toggle" href="login.html" id="navbarDropdown"
-                                role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                Cuenta
-                            </a>
-                            <ul class="dropdown-menu barraUno" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item menuDes" href="login.html">Iniciar Sesion</a></li>
-                                <li><a class="dropdown-item menuDes" href="registrarse.html">Registrarse</a></li>
-                            </ul>
-                        </li>
-                        <div class="barraCuatro">
-                            <li class="nav-item barraTres">
-                                <a class="nav-link" rel="tooltip" title="Consulta por Whatsapp" data-placement="bottom"
-                                    href="https://wa.me/01158203866" target="_blank">
-                                    <i class="fab fa-whatsapp"></i>
-                                    <p class="d-lg-none d-xl-none"></p>
-                                </a>
-                            </li>
-                            <li class="nav-item barraTres">
-                                <a class="nav-link" rel="tooltip" title="Seguinos en Facebook" data-placement="bottom"
-                                    href="https://www.facebook.com/liliana236piedra" target="_blank">
-                                    <i class="fab fa-facebook-square"></i>
-                                    <p class="d-lg-none d-xl-none"></p>
-                                </a>
-                            </li>
-                            <li class="nav-item barraTres">
-                                <a class="nav-link" rel="tooltip" title="Seguinos en Instagram" data-placement="bottom"
-                                    href="https://www.instagram.com/berenicepiedrassemipresiosas" target="_blank">
-                                    <i class="fab fa-instagram"></i>
-                                    <p class="d-lg-none d-xl-none"></p>
-                                </a>
-                            </li>
-                        </div>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-    </header>
     <main class="confirmacionUno">
         <div class="confirmacionDos">
-            <img class="confirmacionTres" src="fotos/logos/logo 5.png" alt="Registro correcto">
-            <p class="confirmacionCuatro">Se ha registrado exitosamente</p>
-            <p class="confirmacionCinco">Gracias por formar parte de nosotros</p>
-            <p class="confirmacionSeis">¿Ya tienes una cuenta? <a class="confirmacionSiete" href="login.html">Ingresa
-                    aqui</a> </p>
+            <img class="confirmacionTres" src="fotos/logo pagina.jpg"  alt="Registro correcto">
+            <p class="confirmacionCuatro">Gracias Por tu Compra</p>
+            <p class="confirmacionCinco">No te olvides de seguirnos en nuestras redes Sociales</p>
+            <button type="button" class="btn">Volver a Inicio</button>
         </div>
     </main>
     <hr>
