--- a/anillos.html
+++ b/anillos.html
@@ -82,7 +82,7 @@
                         </div>
                     </ul>
                     <form class="d-flex">
-                        <input class="form-control me-2" id="filtroBusqueda" type="search" placeholder="Buscá tu producto" aria-label="Search">
+                        <input class="form-control me-2" id="filtroBusqueda" type="text" placeholder="Buscá tu producto" aria-label="Search">
                         <button class="btn btn-outline-success" id="btnBuscadorUno" type="button">Buscar</button>
                     </form>
                 </div>
