--- a/aros.html
+++ b/aros.html
@@ -81,10 +81,10 @@
                             </li>
                         </div>
                     </ul>
-                    <form class="d-flex">
+                    <div class="d-flex">
                         <input class="form-control me-2" id="filtroBusqueda" type="search" placeholder="Buscá tu producto" aria-label="Search">
                         <button class="btn btn-outline-success" id="btnBuscadorUno" type="button">Buscar</button>
-                    </form>
+                </div>
                 </div>
             </div>
         </nav>
