--- a/catalogo.html
+++ b/catalogo.html
@@ -87,26 +87,26 @@
     </header>
     <main>
         <section>
-            <article class="catalogoCuatro">
-                <div class="catalogoUno catUno">
+            <article class="catalogoCuatro" id="productosCatalogo">
+                <div class="catalogoUno catUno clickeable" id="anillos">
                     <a href="anillos.html">
                         <img src="fotos/catalogo/anillos.jpg" alt="anillos" width="300px">
                         <h5>ANILLOS (4)</h5>
                     </a>
                 </div>
-                <div class="catalogoUno">
+                <div class="catalogoUno  clickeable" id="aros">
                     <a href="aros.html">
                         <img src="fotos/catalogo/aros.jpg" alt="aros" width="300px">
                         <h5>AROS (15)</h5>
                     </a>
                 </div>
-                <div class="catalogoUno">
+                <div class="catalogoUno clickeable" id="cadenas">
                     <a href="cadenas.html">
                         <img src="fotos/catalogo/cadenas de acero.jpg" alt="cadenas de acero" width="300px">
                         <h5>CADENAS DE ACERO (9)</h5>
                     </a>
                 </div>
-                <div class="catalogoUno catDos">
+                <div class="catalogoUno catDos clickeable" id="dijes">
                     <a href="dijes.html">
                         <img src="fotos/catalogo/dijes.jpg" alt="dijes" width="300px">
                         <h5>DIJES (20)</h5>
@@ -114,25 +114,25 @@
                 </div>
             </article>
             <article class="catalogoTres">
-                <div class="catalogoDos catTres">
+                <div class="catalogoDos catTres clickeable" id="escallas">
                     <a href="escallas.html">
                         <img src="fotos/catalogo/escallas.jpg" alt="escallas" width="300px">
                         <h5>ESCALLAS (15)</h5>
                     </a>
                 </div>
-                <div class="catalogoDos">
+                <div class="catalogoDos clickeable" id="esotericos">
                     <a href="esotericos.html">
                         <img src="fotos/catalogo/esoterico.jpg" alt="esotoricos" width="300px">
                         <h5>ESOTORICOS (12)</h5>
                     </a>
                 </div>
-                <div class="catalogoDos">
+                <div class="catalogoDos clickeable" id="llaveros">
                     <a href="llaveros.html">
                         <img src="fotos/catalogo/llaveros.jpg" alt="llaveros" width="300px">
                         <h5>LLAVEROS (8)</h5>
                     </a>
                 </div>
-                <div class="catalogoDos catCuatro">
+                <div class="catalogoDos catCuatro clickeable" id="piedras">
                     <a href="piedrassueltas.html">
                         <img src="fotos/catalogo/piedras sueltas.jpg" alt="piedras sueltas" width="300px">
                         <h5>PIEDRAS SUELTAS (10)</h5>
@@ -253,6 +253,7 @@
         </section>
     </footer>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="archivos css/java/funciones.js"></script>
     <script src="archivos css/js/bootstrap.js"></script>
 </body>
 
