--- a/carrito.html
+++ b/carrito.html
@@ -95,6 +95,7 @@
                 </div>
                 <div class="borrarDatos" id="js-borraDatos">
                 </div>
+                <div class="total"></div>
                 <br>
                 <br>
             </fieldset>
@@ -186,27 +187,27 @@
                 <img src="fotos/carrito/llavero de amatista.jpg" alt="llavero de amatista" width="300px" height="300px">
                 <p>Llavero de amatista</p>
                 <p><strong>$280</strong></p>
-                <button type="button" class="btn btn-outline-dark botonUno">Añadir al carrito</button>
+                <button type="button" class="btn btn-outline-dark botonUno"><a class="botonOfertas" href="catalogo.html">Ver ofertas</a></button>
             </div>
             <div class="carroDos">
                 <img src="fotos/carrito/Aros de turmalina negra.jpg" alt="aros turmalina" width="300px" height="300px">
                 <p>Aros de turmalina negra</p>
                 <p><strong>$320</strong></p>
-                <button type="button" class="btn btn-outline-dark botonUno">Añadir al carrito</button>
+                <button type="button" class="btn btn-outline-dark botonUno"><a class="botonOfertas" href="catalogo.html">Ver ofertas</a></button>
             </div>
             <div class="carroDos">
                 <img src="fotos/carrito/Corazon con baño de plata.jpg" alt="Corazon baño de plata" width="300px"
                     height="300px">
                 <p>Corazón con baño de plata</p>
                 <p><strong>$330</strong></p>
-                <button type="button" class="btn btn-outline-dark botonUno">Añadir al carrito</button>
+                <button type="button" class="btn btn-outline-dark botonUno"><a class="botonOfertas" href="catalogo.html">Ver ofertas</a></button>
             </div>
             <div class="carroDos carDos">
                 <img src="fotos/carrito/Dijes de aqua aura arcoiris.jpg" alt="dijes arcoiris" width="300px"
                     height="300px">
                 <p>Dijes aura arcoiris</p>
                 <p><strong>$240</strong></p>
-                <button type="button" class="btn btn-outline-dark botonUno">Añadir al carrito</button>
+                <button type="button" class="btn btn-outline-dark botonUno"><a class="botonOfertas" href="catalogo.html">Ver ofertas</a></button>
             </div>
         </section>
     </main>
