--- a/index.html
+++ b/index.html
@@ -158,28 +158,28 @@
                         height="300px">
                     <p>Aros bolitas</p>
                     <p><strong>$250</strong></p>
-                    <button type="button" class="btn btn-outline-dark botonUno">Añadir al carrito</button>
+                    <button type="button" class="btn btn-outline-dark botonUno"><a class="botonOfertas" href="catalogo.html">Ver ofertas</a></button>
                 </div>
                 <div class="inicioUno">
                     <img src="fotos/ofertas de la semana/aros de acero de jaspe dalmata.jpg" alt="aros de acero dalmata"
                         width="300px" height="300px">
                     <p>Aros de acero dalmata</p>
                     <p><strong>$300</strong></p>
-                    <button type="button" class="btn btn-outline-dark botonUno">Añadir al carrito</button>
+                    <button type="button" class="btn btn-outline-dark botonUno"><a class="botonOfertas" href="catalogo.html">Ver ofertas</a></button>
                 </div>
                 <div class="inicioUno">
                     <img src="fotos/ofertas de la semana/Masajeadores.jpg" alt="masajeadores grandes" width="300px"
                         height="300px">
                     <p>Masajeadores grandes</p>
                     <p><strong>$400</strong></p>
-                    <button type="button" class="btn btn-outline-dark botonUno">Añadir al carrito</button>
+                    <button type="button" class="btn btn-outline-dark botonUno"><a class="botonOfertas" href="catalogo.html">Ver ofertas</a></button>
                 </div>
                 <div class="inicioUno indDos">
                     <img src="fotos/ofertas de la semana/Pendulo de c rosa 7 chakras.png" alt="pendulo 7chakras"
                         width="300px" height="300px">
                     <p>Péndulo rosa 7 chakras</p>
                     <p><strong>$350</strong></p>
-                    <button type="button" class="btn btn-outline-dark botonUno">Añadir al carrito</button>
+                    <button type="button" class="btn btn-outline-dark botonUno"><a class="botonOfertas" href="catalogo.html">Ver ofertas</a></button>
                 </div>
             </div>
         </section>
@@ -194,28 +194,28 @@
                         height="300px">
                     <p>Aros corazón piedra luna</p>
                     <p><strong>$275</strong></p>
-                    <button type="button" class="btn btn-outline-dark botonUno">Añadir al carrito</button>
+                    <button type="button" class="btn btn-outline-dark botonUno"><a class="botonOfertas" href="catalogo.html">Ver ofertas</a></button>
                 </div>
                 <div class="inicioDos">
                     <img src="fotos/ofertas de la semana/chapa agata.jpg" alt="druza amatista" width="300px"
                         height="300px">
                     <p>Chapa ágata</p>
                     <p><strong>$800</strong></p>
-                    <button type="button" class="btn btn-outline-dark botonUno">Añadir al carrito</button>
+                    <button type="button" class="btn btn-outline-dark botonUno"><a class="botonOfertas" href="catalogo.html">Ver ofertas</a></button>
                 </div>
                 <div class="inicioDos">
                     <img src="fotos/mas vendido/tiras hawlite blanca.jpg" alt="tiras hawlite blanca" width="300px"
                         height="300px">
                     <p>Tiras howlite blanca</p>
                     <p><strong>$300</strong></p>
-                    <button type="button" class="btn btn-outline-dark botonUno">Añadir al carrito</button>
+                    <button type="button" class="btn btn-outline-dark botonUno"><a class="botonOfertas" href="catalogo.html">Ver ofertas</a></button>
                 </div>
                 <div class="inicioDos indCuatro">
                     <img src="fotos/ofertas de la semana/lapislazuli.jpg" alt="Piedra azul" width="300px"
                         height="300px">
                     <p>Lapislázuli chileno</p>
                     <p><strong>$250</strong></p>
-                    <button type="button" class="btn btn-outline-dark botonUno">Añadir al carrito</button>
+                    <button type="button" class="btn btn-outline-dark botonUno"><a class="botonOfertas" href="catalogo.html">Ver ofertas</a></button>
                 </div>
             </div>
         </section>
@@ -330,11 +330,6 @@
             </div>
         </section>
     </footer>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script src="archivos css/java/datostorege.js"></script>
-    <script src="archivos css/java/funciones.js"></script>
-    <script src="archivos css/java/alert.js"></script>
     <script src="archivos css/js/popper.min.js"></script>
     <script src="archivos css/js/bootstrap.js"></script>
 </body>
