--- a/login.html
+++ b/login.html
@@ -88,6 +88,7 @@
         </nav>
     </header>
     <main>
+        <section class="confirmacionOcho"></section>
         <section class="loginCuatro" id="#prueba2">
             <fieldset class="loginUno" id="prueba">
                 <legend>
