--- a/anillos.html
+++ b/anillos.html
@@ -83,7 +83,7 @@
                     </ul>
                     <form class="d-flex">
                         <input class="form-control me-2" id="filtroBusqueda" type="text" placeholder="Buscá tu producto" aria-label="Search">
-                        <button class="btn btn-outline-success" id="btnBuscadorUno" type="button">Buscar</button>
+                        <button class="btn btn-outline-info" id="btnBuscadorUno" type="button">Buscar</button>
                     </form>
                 </div>
             </div>
@@ -106,7 +106,7 @@
                 <input class="filtroPrecio" id="js-filtroPrecio" type="radio" name="precio" value="3">Mostrar Todos
                 </div>
             <div>
-                <button type="button" id="btnRadio" class="btn btn-outline-success">Filtrar</button>
+                <button type="button" id="btnRadio" class="btn btn-outline-info filtroBuscar">Filtrar</button>
             </div>
         </div>
     </form>
@@ -228,9 +228,9 @@
         </section>
     </footer>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="archivos css/java/datostorege.js"></script>
     <script src="archivos css/java/funciones.js"></script>
-    
     <script src="archivos css/java/anillos.js"></script>
     <script src="archivos css/js/bootstrap.js"></script>
 </body>
